--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -56,9 +56,9 @@
     <packaging>pom</packaging>
 
     <properties>
-        <product.name>Digital Experience Manager</product.name>
+        <product.name>Jahia</product.name>
         <product.version>${project.version}</product.version>
-        <product.fullname>DigitalExperienceManager-CommunityDistribution-${product.version}</product.fullname>
+        <product.fullname>Jahia-CommunityDistribution-${product.version}</product.fullname>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
     </properties>
 
