--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <connection>scm:git:git@github.com:Jahia/dxm-pack-private.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/dxm-pack-private.git</developerConnection>
         <url>https://github.com/Jahia/dxm-pack-private</url>
-        <tag>JAHIA-7-3-2-X-BRANCH</tag>
+        <tag>JAHIA-7-3-2-0-BRANCH</tag>
     </scm>
 
     <repositories>
