--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -229,7 +229,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.7</version>
+            <version>7.2.8-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
