--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.6</version>
+            <version>7.1.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
