--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -126,7 +126,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.1.5</version>
+           <version>1.1.6-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
