--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -285,7 +285,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.9</version>
+            <version>7.1.10-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
