--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.7</version>
+            <version>7.1.8-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
