--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -175,7 +175,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.4.1</version>
+            <version>2.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
