--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
+    <version>7.3.3.0-SNAPSHOT</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
