--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -48,7 +48,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-package</artifactId>
-        <version>7.3.3.0</version>
+        <version>7.3.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-installer-package</artifactId>
@@ -66,14 +66,14 @@
         <dependency>
             <groupId>org.jahia.configuration</groupId>
             <artifactId>configurators</artifactId>
-            <version>5.8</version>
+            <version>${jahia.configurators.version}</version>
             <classifier>standalone</classifier>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.configuration</groupId>
             <artifactId>jahia-installer-lib</artifactId>
-            <version>5.8</version>
+            <version>${jahia.installers.version}</version>
         </dependency>
 
         <dependency>
