--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -174,13 +174,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-components</artifactId>
-            <version>3.6.0-SNAPSHOT</version>
+            <version>3.6.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-core</artifactId>
-            <version>3.6.0-SNAPSHOT</version>
+            <version>3.6.0</version>
             <scope>runtime</scope>
         </dependency>
         <!-- end of Jahia Forge Modules -->
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>3.2.0</version>
             <scope>runtime</scope>
         </dependency>
 
