--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -102,25 +102,25 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.1.11-SNAPSHOT</version>
+            <version>3.1.10</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.1.11-SNAPSHOT</version>
+            <version>3.1.10</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.2.1-SNAPSHOT</version>
+           <version>1.2.0</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.1.11-SNAPSHOT</version>
+            <version>3.1.10</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.9-SNAPSHOT</version>
+            <version>1.1.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
