--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,13 @@
     <parent>
         <groupId>org.jahia</groupId>
         <artifactId>jahia-parent</artifactId>
-        <version>7.5.0.0-backlog_11226-SNAPSHOT</version>
+        <version>7.5.0.0-SNAPSHOT</version>
         <relativePath>../jahia-root/jahia-parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
-    <version>7.5.0.0-backlog_11226-SNAPSHOT</version>
+    <version>7.5.0.0-SNAPSHOT</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
