--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.2.3</version>
+            <version>7.2.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -181,7 +181,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jquery</artifactId>
-            <version>7.1.3</version>
+            <version>7.1.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
