--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.4.0</version>
+            <version>7.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
-            <version>7.1.4</version>
+            <version>7.1.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.2.0</version>
+            <version>7.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
