--- a/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -206,8 +206,7 @@ tomcat.util.scan.StandardJarScanFilter.jarsToScan=\
 log4j-taglib*.jar,\
 log4j-web*.jar,\
 log4javascript*.jar,\
-slf4j-taglib*.jar,\
-jahia-ee-impl-*.jar
+slf4j-taglib*.jar
 
 # String cache configuration.
 tomcat.util.buf.StringCache.byte.enabled=true
