--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -270,12 +270,24 @@
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
                         <executions>
                             <execution>
-                                <id>sign</id>
+                                <id>sign-jar</id>
+                                <!--we need to do it in the "verify" phase to be sure that izpack has already packaged the installer-->
+                                <phase>verify</phase>
+                                <configuration>
+                                    <target>
+                                        <retry retryCount="3" retryDelay="30000">
+                                            <exec executable="jarsigner" failOnError="true">
+                                                <arg line="-storetype PKCS12 -keystore ${jahia.sign.keystore} -storepass ${jahia.sign.storepass} -tsa http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.jar jahia"/>
+                                            </exec>
+                                        </retry>
+                                    </target>
+                                </configuration>
                                 <goals>
-                                    <goal>sign</goal>
+                                    <goal>run</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -315,6 +327,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
                         <executions>
                             <execution>
                                 <id>sign-exe</id>
@@ -322,9 +335,11 @@
                                 <configuration>
                                     <target>
                                         <chmod file="${project.build.directory}/sign4j/${sign4j.executable}" perm="ugo+rx" />
-                                        <exec executable="${project.build.directory}/sign4j/${sign4j.executable}">
-                                            <arg line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.exe" />
-                                        </exec>
+                                        <retry retryCount="3" retryDelay="30000">
+                                            <exec executable="${project.build.directory}/sign4j/${sign4j.executable}" failOnError="true">
+                                                <arg line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.exe"/>
+                                            </exec>
+                                        </retry>
                                     </target>
                                 </configuration>
                                 <goals>
