--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.5.0</version>
+            <version>7.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
