--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -89,6 +89,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>content-editor</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>contentRetrieval</artifactId>
             <version>7.1.1</version>
             <scope>runtime</scope>
