--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -83,8 +83,8 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>content-media-manager</artifactId>
-            <version>1.5.0-SNAPSHOT</version>
+            <artifactId>jcontent</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
