--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -126,25 +126,25 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.4.0</version>
+            <version>3.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.4.0</version>
+            <version>3.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.2.0</version>
+           <version>1.3.0-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.4.0</version>
+            <version>3.5.0-SNAPSHOT</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>macros</artifactId>
-            <version>7.1.2</version>
+            <version>7.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
